# aiot-skin-guard

./: .gitignore  app.py  data_loader.py  main.py  pyproject.toml  styles.css
data/: indoor_data.json  skin-monitor.csv  tomorrow_recent_data.json
data/indoor/: 2026-02-18_00-08.json  2026-02-18_00-22.json  2026-02-18_00-31.json  2026-02-18_01-01.json  2026-02-18_01-31.json  2026-02-18_02-01.json  2026-02-18_02-30.json  2026-02-18_03-00.json  2026-02-18_03-30.json  2026-02-18_04-00.json  2026-02-18_04-30.json  2026-02-18_05-00.json  2026-02-18_05-30.json  2026-02-18_06-00.json  2026-02-18_06-30.json  2026-02-18_07-30.json  2026-02-18_08-00.json  2026-02-18_08-30.json  2026-02-18_09-00.json  2026-02-18_09-30.json  2026-02-18_10-00.json  2026-02-18_10-30.json  2026-02-18_11-00.json  2026-02-18_11-29.json  2026-02-18_11-59.json  2026-02-18_12-29.json  2026-02-18_12-59.json  2026-02-18_13-29.json  2026-02-18_13-59.json  2026-02-18_14-29.json  2026-02-18_14-59.json  2026-02-18_15-29.json  2026-02-18_15-59.json  2026-02-18_16-59.json  2026-02-18_17-29.json  2026-02-18_17-59.json  2026-02-18_18-29.json  2026-02-18_18-59.json  2026-02-18_19-29.json  2026-02-18_19-59.json  (+1201 more)
data/recent-history/: 2026-02-11.json  2026-02-12_12-04.json  2026-02-13_00-06.json  2026-02-13_12-04.json  2026-02-14_00-04.json  2026-02-14_12-04.json  (+61 more)
dht/: dht.ino
notebook/: eda_in_out.ipynb  eda_skin.ipynb  threshold_analysis.ipynb
report/: indoor_vs_outdoor_analysis.md  skin_degradation_analysis.md
script/: process_indoor_data.py  process_tomorrow_data.py  tomorrow_history.py
(+2 files in other folders)
