[project]
name = "aiot-skin-gaurd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openmeteo-requests>=1.7.5",
    "pandas>=3.0.0",
    "python-dotenv>=1.2.1",
    "requests-cache>=1.3.0",
    "retry-requests>=2.0.0",
]
